--- a/UserInfo/res/layout/display.xml
+++ b/UserInfo/res/layout/display.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical" >
     
     <TextView 
-        android:id="@+id/user_txtvw"
+        android:id="@+id/user_txt"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
-    
+        android:layout_width="match_parent"
+        />
+   
 
 </LinearLayout>
