--- a/ExampleListView/res/layout/items.xml
+++ b/ExampleListView/res/layout/items.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gad" >
+    android:background="@drawable/gad"
+     >
     
     <ListView android:id="@+id/items_list"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:layout_width="match_parent"
+        />
 
 </LinearLayout>
