--- a/ExampleListView/res/layout/innerlayout.xml
+++ b/ExampleListView/res/layout/innerlayout.xml
@@ -20,19 +20,19 @@
             android:layout_width="match_parent"
             android:layout_weight="1">
             
-           <Button android:id="@+id/name_btn"
+           <TextView android:id="@+id/name_txt"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:text="@string/none"/>
             
-            <Button android:id="@+id/email_btn"
-                android:layout_below="@id/name_btn"
+            <TextView android:id="@+id/email_txt"
+                android:layout_below="@id/name_txt"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:text="@string/none"/>
              
-            <Button android:id="@+id/phn_btn"
-                android:layout_below="@id/email_btn"
+            <TextView android:id="@+id/phn_txt"
+                android:layout_below="@id/email_txt"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:text="@string/none"/>
