--- a/SimpleProgressBarActivity/res/layout/event.xml
+++ b/SimpleProgressBarActivity/res/layout/event.xml
@@ -2,7 +2,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical"
+    android:weightSum="4" >
+
+    <EditText
+        android:id="@+id/event_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/event_name"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/stream_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/stream"
+        android:inputType="text" />
+
+    <LinearLayout
+        android:id="@+id/layout_picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <DatePicker
+            android:id="@+id/date_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
+           />
+
+        <TimePicker
+            android:id="@+id/time_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/layout_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/set_btn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/set" 
+          android:layout_weight="1.0"
+          android:padding="10dp"/>
+
+        <Button
+            android:id="@+id/cancel_btn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/set_btn"
+            android:text="@string/cancel" 
+            android:layout_weight="1.0"
+          android:padding="10dp"/>
+    </RelativeLayout>
 
 </LinearLayout>
