--- a/SimpleProgressBarActivity/res/layout/event.xml
+++ b/SimpleProgressBarActivity/res/layout/event.xml
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>   
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:weightSum="4" >
-
+    android:weightSum="4"
+     >
+    
     <EditText
         android:id="@+id/event_edt"
         android:layout_width="match_parent"
@@ -19,67 +20,58 @@
         android:hint="@string/stream"
         android:inputType="text" />
 
-    <LinearLayout
-        android:id="@+id/layout_picker"
+    <Button
+        android:id="@+id/date_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical" >
+        android:padding="10dp"
+        android:text="@string/date" />
 
-        <DatePicker
-            android:id="@+id/date_menu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
-           />
-
-        <TimePicker
-            android:id="@+id/time_menu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/time_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/time" />
+    
+    <TextView android:id="@+id/result_event"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="10dp"/>
+    
+    
+    <TextView android:id="@+id/result_date"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="10dp"/>
+    
+    <TextView android:id="@+id/result_time"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="10dp"/>
+    
 
     <RelativeLayout
         android:id="@+id/layout_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="2"
-        android:gravity="center">
+        android:gravity="center" >
 
         <Button
             android:id="@+id/set_btn"
-<<<<<<< HEAD
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="@string/set" 
-        
-            android:layout_weight="1.0"
-=======
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/set" 
-          android:layout_weight="1.0"
->>>>>>> 477b9950e0377973be4afb6b6b60b4a724a3ba26
-          android:padding="10dp"/>
+            android:padding="10dp"
+            android:text="@string/set" />
 
         <Button
             android:id="@+id/cancel_btn"
-<<<<<<< HEAD
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/set_btn"
-            android:text="@string/cancel" 
-          
-            android:layout_weight="1.0"
-          android:padding="10dp"/>
-        
-=======
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/set_btn"
-            android:text="@string/cancel" 
-            android:layout_weight="1.0"
-          android:padding="10dp"/>
->>>>>>> 477b9950e0377973be4afb6b6b60b4a724a3ba26
-    </RelativeLayout>
+            android:padding="10dp"
+            android:text="@string/cancel" />
+    </RelativeLayout>  
 
 </LinearLayout>
