--- a/SimpleProgressBarActivity/res/layout/sample.xml
+++ b/SimpleProgressBarActivity/res/layout/sample.xml
@@ -15,13 +15,26 @@
         android:padding="20dp"
         android:textSize="30sp"
         android:layout_gravity="center"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="100dp"
         android:background="@android:color/transparent"
       
         
        />
     
-
+<Button android:id="@+id/menu_btn"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:text="@string/menu_set"
+        android:padding="20dp"
+        android:textSize="30sp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="100dp"
+        android:background="@android:color/transparent"
+      
+        
+       />
+    
     
 
 </LinearLayout>
