--- a/JsonDownloader/res/layout/json.xml
+++ b/JsonDownloader/res/layout/json.xml
@@ -4,28 +4,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/gradient"
    >
-    
-    
     
     <Button android:id="@+id/json_btn"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="125dp"
         android:text="@string/download"/>
     
     <TextView android:id="@+id/data_txt"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="20dp"
-        android:layout_marginTop="50dp"/>
+        android:textColor="#ffffff"
+         android:textSize="25sp"
+          android:layout_marginTop="10dp"
+          android:textStyle="bold|italic"
+         />
     
      <TextView android:id="@+id/data2_txt"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="20dp"
-        android:layout_marginTop="50dp"/>
+         android:textColor="#ffffff"
+          android:textSize="25sp"
+          android:textStyle="bold|italic"
+        />
+     
+     <TextView android:id="@+id/data3_txt"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+         android:textColor="#ffffff"
+         android:textSize="25sp"
+         android:textStyle="bold|italic"
+     />
      
       
 
