--- a/SampleNotificationActivity/res/layout/local.xml
+++ b/SampleNotificationActivity/res/layout/local.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/icon">
     
     
     <Button android:id="@+id/local_broadcast_btn"
@@ -10,9 +11,13 @@
         android:layout_width="wrap_content"
         android:text="@string/local_broadcast"
         android:padding="20dp"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="200dp"
         android:layout_marginLeft="50dp"
         android:gravity="center"
+        android:textColor="#ff0000"
+        android:background="@android:color/transparent"
+        android:textStyle="bold|italic"
+        android:textSize="20sp"
       />
     
     
