--- a/SampleNotificationActivity/res/layout/notification.xml
+++ b/SampleNotificationActivity/res/layout/notification.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:layout_gravity="center"
-    android:layout_marginTop="80dp">
+    
+    android:background="@drawable/pink">
     
     <Button android:id="@+id/broadcast_btn"
         android:layout_height="wrap_content"
@@ -13,6 +14,9 @@
         android:padding="20dp"
         android:layout_marginLeft="70dp"
         android:gravity="center"
+        android:layout_marginTop="80dp"
+        android:background="@android:color/transparent"
+         android:textStyle="bold|italic"
       />
     
      <Button android:id="@+id/notify_btn"
@@ -22,7 +26,9 @@
         android:padding="20dp"
          android:layout_marginLeft="80dp"
          android:layout_marginTop="20dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:background="@android:color/transparent"
+         android:textStyle="bold|italic"/>
      
     <Button android:id="@+id/local_btn"
         android:layout_height="wrap_content"
@@ -31,7 +37,9 @@
         android:padding="20dp"
          android:layout_marginLeft="80dp"
          android:layout_marginTop="20dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:background="@android:color/transparent"
+         android:textStyle="bold|italic"/>
     
 
 </LinearLayout>
