--- a/DatabaseDemoApplication/res/layout/database.xml
+++ b/DatabaseDemoApplication/res/layout/database.xml
@@ -60,5 +60,13 @@
             android:padding="20dp"
             android:text="@string/newUser" />
     </RelativeLayout>
+    
+    <Button
+            android:id="@+id/allusers_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:padding="20dp"
+            android:text="@string/alluser" />
 
 </LinearLayout>
