--- a/SampleLoginDemo/res/layout/login.xml
+++ b/SampleLoginDemo/res/layout/login.xml
@@ -15,7 +15,7 @@
 
         <ImageView
             android:id="@+id/img_vw"
-            android:layout_width="80dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:background="@drawable/login_logo" />
 
@@ -27,7 +27,7 @@
             android:text="@string/title"	
             android:textColor="#ffffff"
             android:textSize="20sp"
-            android:gravity="center"
+            android:gravity="right|center"
              />
     </LinearLayout>
 
@@ -35,7 +35,7 @@
         android:id="@+id/linear_subtitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="60dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical" >
@@ -52,31 +52,33 @@
             android:id="@+id/user_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="80dp"
+            android:layout_marginRight="90dp"
             android:text="@string/user"
             android:textSize="15sp" />
 
         <EditText
             android:id="@+id/user_edt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:hint="@string/email_hint"
-            android:inputType="text" />
+            android:inputType="text" 
+            android:background="@drawable/edit_text_background"/>
 
         <TextView
             android:id="@+id/pwd_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="80dp"
+            android:layout_marginRight="95dp"
             android:text="@string/pwd"
             android:textSize="15sp" />
 
         <EditText
             android:id="@+id/pwd_edt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:hint="@string/pwd_hint"
-            android:inputType="text" />
+            android:inputType="text"
+            android:background="@drawable/edit_text_background" />
 
         <Button
             android:id="@+id/login"
@@ -86,7 +88,8 @@
             android:background="#9C2AA0"
             android:padding="10dp"
             android:text="@string/login"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/forget_txt"
