--- a/ContentProviderDemo/res/layout/create.xml
+++ b/ContentProviderDemo/res/layout/create.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/blue" >
     
      <EditText
         android:id="@+id/name_edt"
@@ -10,12 +11,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="@string/name_hint"
-        android:inputType="text" />
+        android:inputType="text" 
+        android:textColor="@color/white"/>
 
     <EditText
         android:id="@+id/email_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"
         android:hint="@string/mail_hint"
         android:inputType="textEmailAddress" />
@@ -26,7 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="@string/type_hint"
-        android:inputType="text" />
+        android:inputType="text" 
+         android:textColor="@color/white"/>
 
     <EditText
         android:id="@+id/number_edt"
@@ -34,26 +38,31 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="@string/number_hint"
-        android:inputType="phone" />
+        android:inputType="phone" 
+         android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/addContact_btn"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/addContact"
-        android:onClick="onClickAddContact" />
+        android:onClick="onClickAddContact"
+         android:textColor="@color/white"
+         android:background="@color/red_dart" />
     
       <Button
         android:id="@+id/showContact_btn"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/showContacts"
+         android:textColor="@color/white"
+         android:background="@color/red_dart"
         />
     
     
