--- a/SampleActionBarDemo/res/layout/web.xml
+++ b/SampleActionBarDemo/res/layout/web.xml
@@ -6,20 +6,9 @@
     android:weightSum="2"
     android:background="@color/steel_blue">
     
-    <ImageView android:layout_height="250dp"
-       android:layout_width="wrap_content"
-       android:src="@drawable/webdesign"
-       android:layout_marginTop="40dp"
-       android:layout_weight="1"
-       />
-     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/web" 
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:padding="20dp"
-         android:textSize="20sp"
-         android:layout_weight="1"/>
+   <WebView android:layout_height="match_parent"
+       android:layout_width="match_parent"
+       android:id="@+id/web_Vw"/>
+   
 
 </LinearLayout>
