--- a/SampleDemo/res/layout/main.xml
+++ b/SampleDemo/res/layout/main.xml
@@ -16,5 +16,28 @@
         android:layout_height="match_parent"
         android:layout_marginTop="200dp"
         android:background="@android:color/transparent" />
-   
+    
+    <android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ExpandableListView
+        android:id="@+id/expandable_right_drawer"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+       
+        android:choiceMode="singleChoice"
+        android:background="#6600ffff"
+        android:divider="@android:color/white"
+        android:dividerHeight="0dp"
+      />
+</android.support.v4.widget.DrawerLayout>
 </RelativeLayout>
