--- a/SampleDemo/res/layout/inflate.xml
+++ b/SampleDemo/res/layout/inflate.xml
@@ -8,13 +8,13 @@
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:checked="false" />
+       />
 
     <TextView
         android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/checkbox"
-        android:text="string" />
+        android:text="@string/app_name" />
 
 </RelativeLayout>
